# cmake_test

./: .gitignore  README.md
cmake/demo1/: CMakeLists.txt  demo1.cpp
cmake/demo2/: CMakeLists.txt  demo2.cpp  test.cpp  test.h
cmake/demo3/: CMakeLists.txt  demo3.cpp
cmake/demo3/math/: CMakeLists.txt  math.cpp  math.h
cmake/demo4/: CMakeLists.txt  Foo.cpp  Foo.h
cmake/demo5/: CMakeLists.txt  main.cpp
cmake/demo5/cmake/: FindFoo.cmake
cmake/demo6/: CMakeLists.txt
cmake/demo6/cmake/: Findfun.cmake
cmake/demo6/src/: CMakeLists.txt  main.cpp
cmake/demo6/test/: CMakeLists.txt  test.cpp
cmake/demo6/util/: CMakeLists.txt  fun.cpp  fun.h
cmake/demo7/: CMakeLists.txt
cmake/demo7/include/: fun.h
cmake/demo7/src/: CMakeLists.txt  fun.cpp
cmake/demo7/tool/: CMakeLists.txt
cmake/demo7/tool/tool1/: CMakeLists.txt  main.cpp
grpc_helloworld/: CMakeLists.txt  client.cpp  gen.sh  readme  server.cpp
gtest_test/: .gitignore  CMakeLists.txt
gtest_test/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  test.cpp
gtest_test/testlib/: CMakeLists.txt  testlib.cpp  testlib.h
protobuf_test/: CMakeLists.txt  message.pb.cc  message.pb.h  message.proto  msg.cpp  readme
thrift_demo/: CMakeLists.txt  Client.cpp  Server.cpp  demo.thrift
thrift_demo/gen-cpp/: Test.cpp  Test.h  Test_server.skeleton.cpp  demo_constants.cpp  demo_constants.h  demo_types.cpp  demo_types.h
