
cmake_minimum_required(VERSION 2.8)
message("1")
set(var 1 2 "a" "b")
set(a 1 2 3 4)
message(${var})
message(${a})
set(aa main.c main1.c main2.c)
message(${aa})
set(src1 main.c func.c foo.c) 
message(${src1})
#project(Demo3)
aux_source_directory(. SRC)
add_subdirectory(math)
add_executable(Demo ${SRC})
message(${SRC})
target_link_libraries(Demo Math)