cmake_minimum_required(VERSION 3.0)
project(demo5)

set(SRC main.cpp )
message(${CMAKE_SOURCE_DIR})
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/ )
message(${CMAKE_MODULE_PATH})
find_package(Foo REQUIRED)
message("foo found ${Foo_FOUND}")
message("foo include ${Foo_INCLUDE_DIR}")
message("foo libname1 ${Foo_LIBS}")
message("foo libname2 ${Foo_LIBRARIES}")
include_directories(${Foo_INCLUDE_DIR})
# if(EXISTS ${CMAKE_SOURCE_DIR})
# message("1")
# ENDIF()
# if(EXISTS ${CMAKE_MODULE_PATH})
# message("2")
# ENDIF()
#find_package()
add_executable(demo5 ${SRC})
target_link_libraries(demo5 ${Foo_LIBRARIES})
